welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:7: error: not found: value getIndication
if (getIndication()=='R'){
    ^BDRBuggle:12: error: not found: value getIndication
if (getIndication()=='L'){
    ^BDRBuggle:17: error: not found: value getIndication
if (getIndication()=='I'){
    ^BDRBuggle:24: error: not found: value getIndication
if (getIndication()=='A'){
    ^BDRBuggle:29: error: not found: value getIndication
if (getIndication()=='B'){
    ^BDRBuggle:34: error: not found: value getIndication
if (getIndication()=='C'){
    ^BDRBuggle:40: error: not found: value getIndication
if (getIndication()=='Z'){
    ^BDRBuggle:45: error: not found: value getIndication
if (getIndication()=='Y'){
    ^BDRBuggle:50: error: not found: value getIndication
if (getIndication()=='X'){
    ^